--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </h1>
     <!-- Attribute Binding -->
     <a v-bind:href="Link.href" v-bind:title="Title.text">
-      <img src="photo_2023-07-24_17-20-58.jpg" alt="img" width="500" height="600">
+      <img :src="imageSource" :alt="imageAlt" width="500" height="600">
     </a>
     <!-- Conditional Rendering -->
     <div v-if="inSale">On Sale</div>
@@ -23,6 +23,19 @@
     <ul>
       <li v-for="size in sizes" :key="size.key">{{ size.size }}</li>
     </ul>
+    <div v-for="variant in variants" :key="variant.variantId">
+      <p @mouseover="updatePtoduct(variant.variantImage)">
+        {{ variant.variantColor }}
+      </p>
+    </div>
+
+    <button v-on:click="addToCart"> add to cart</button>
+    <button v-on:click="removeFromToCart"> remov to cart</button>
+
+
+    <div class="cart">
+      <p> Cart{{cart}}</p>
+    </div>
   </div>
 </body>
 </html>
