--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <body>
   <div id="nastaran">
-    <product :premium="premium"></product>
+    <div class="cart">
+      <p>Cart({{ cart.length }})</p>
+    </div>
+    <product :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeFromCart"></product>
   </div>
 
   <script src="main.js"></script>
